# CorvusSAT_2

./: .gitignore  CMakeLists.txt  main.cpp  openocd.cfg  pico-debug.cfg
BME280/: BME280.cpp  CMakeLists.txt
BME280/include/: BME280.h  BME280Reg.h
FatFs_SPI/sd_driver/: hw_config.c  spi.h
GPS/: CMakeLists.txt  m100Mini.cpp
GPS/include/: m100Mini.h
ICM20948/: CMakeLists.txt  ICM20948.cpp
ICM20948/include/: ICM20948.h  ICM20948Reg.h
INTERRUPT/: CMakeLists.txt  interrupt.cpp
INTERRUPT/include/: interrupt.h
PCF8574/: CMakeLists.txt  PCF8574.cpp
PCF8574/include/: PCF8574.h
SX1276/: CMakeLists.txt  sx1276.cpp
SX1276/include/: sx1276.h
loraPacket/: CMakeLists.txt  loraPacket.cpp
loraPacket/include/: loraPaket.h
